--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,3 +2,4 @@
 17.11: Bugfixed procID 40; unpacks VFTX correctly now --Martin
 
 17.11: Fixed unpacking of V785 in TPC crate (set now to 'real' geo=13), changes in setup file
+29.11: Go4 won't caree about trigger type=2 (aida sync event)
